# valentinescards

./: .gitignore  BUILD.bazel  README.md  go.mod  go.sum
pkg/constants/: BUILD.bazel  googlecloud.go
pkg/firestore/: BUILD.bazel  card_manager.go  firestore.go  main.go
pkg/firestore/docs/: BUILD.bazel  card.go  user.go
