load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "firestore_lib",
    srcs = ["card_manager.go"],
    importpath = "github.com/donkeyroll-shouting/valentinescards/pkg/firestore",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/firestore/docs",
        "//vendor/cloud.google.com/go/firestore",
    ],
)
